Se han detectado problemas a la hora de crear el primer evento y se le esta dando solución